// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert config accepts options {"dimensions":false} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg viewBox=\\"0 0 88 88\\" xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"expandProps":"start"} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg {...props} width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\">
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"expandProps":false} 1`] = `
"import * as React from 'react'

const SvgComponent = () => (
  <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\">
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"exportType":"named"} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export { SvgComponent as ReactComponent }
"
`;

exports[`convert config accepts options {"icon":"2em"} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg
    width=\\"2em\\"
    height=\\"2em\\"
    viewBox=\\"0 0 88 88\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    {...props}
  >
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"icon":24} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg
    width={24}
    height={24}
    viewBox=\\"0 0 88 88\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    {...props}
  >
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"icon":true} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg
    width=\\"1em\\"
    height=\\"1em\\"
    viewBox=\\"0 0 88 88\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    {...props}
  >
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"memo":true} 1`] = `
"import * as React from 'react'
import { memo } from 'react'

const SvgComponent = (props) => (
  <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

const Memo = memo(SvgComponent)
export default Memo
"
`;

exports[`convert config accepts options {"namedExport":"Component","state":{"caller":{"previousExport":"export default \\"logo.svg\\";"}}} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export { SvgComponent as Component }
export default 'logo.svg'
"
`;

exports[`convert config accepts options {"native":true,"expandProps":false} 1`] = `
"import * as React from 'react'
import Svg, { G, Path } from 'react-native-svg'

const SvgComponent = () => (
  <Svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\">
    <G
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <Path d=\\"M51 37 37 51M51 51 37 37\\" />
    </G>
  </Svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"native":true,"icon":true} 1`] = `
"import * as React from 'react'
import Svg, { G, Path } from 'react-native-svg'

const SvgComponent = (props) => (
  <Svg
    width={24}
    height={24}
    viewBox=\\"0 0 88 88\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    {...props}
  >
    <G
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <Path d=\\"M51 37 37 51M51 51 37 37\\" />
    </G>
  </Svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"native":true,"ref":true} 1`] = `
"import * as React from 'react'
import Svg, { G, Path } from 'react-native-svg'
import { forwardRef } from 'react'

const SvgComponent = (props, ref) => (
  <Svg
    width={88}
    height={88}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    ref={ref}
    {...props}
  >
    <G
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <Path d=\\"M51 37 37 51M51 51 37 37\\" />
    </G>
  </Svg>
)

const ForwardRef = forwardRef(SvgComponent)
export default ForwardRef
"
`;

exports[`convert config accepts options {"native":true} 1`] = `
"import * as React from 'react'
import Svg, { G, Path } from 'react-native-svg'

const SvgComponent = (props) => (
  <Svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <G
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <Path d=\\"M51 37 37 51M51 51 37 37\\" />
    </G>
  </Svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"prettier":false} 1`] = `
"import * as React from \\"react\\";

const SvgComponent = props => <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}><g stroke=\\"#063855\\" strokeWidth={2} fill=\\"none\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\"><path d=\\"M51 37 37 51M51 51 37 37\\" /></g></svg>;

export default SvgComponent;"
`;

exports[`convert config accepts options {"ref":true} 1`] = `
"import * as React from 'react'
import { forwardRef } from 'react'

const SvgComponent = (props, ref) => (
  <svg
    width={88}
    height={88}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    ref={ref}
    {...props}
  >
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

const ForwardRef = forwardRef(SvgComponent)
export default ForwardRef
"
`;

exports[`convert config accepts options {"replaceAttrValues":{"none":"{black}"}} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill={black}
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"replaceAttrValues":{"none":"black"}} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"black\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"svgProps":{"a":"b","b":"{props.b}"}} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg
    width={88}
    height={88}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    a=\\"b\\"
    b={props.b}
    {...props}
  >
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"svgo":false} 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg
    width=\\"88px\\"
    height=\\"88px\\"
    viewBox=\\"0 0 88 88\\"
    xmlns=\\"http://www.w3.org/2000/svg\\"
    xmlnsXlink=\\"http://www.w3.org/1999/xlink\\"
    {...props}
  >
    <title>{'Dismiss'}</title>
    <desc>{'Created with Sketch.'}</desc>
    <defs />
    <g
      id=\\"Blocks\\"
      stroke=\\"none\\"
      strokeWidth={1}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <g id=\\"Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
        <path d=\\"M51,51 L37,37\\" id=\\"Shape\\" />
      </g>
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {"titleProp":true} 1`] = `
"import * as React from 'react'

const SvgComponent = ({ title, titleId, ...props }) => (
  <svg
    width={88}
    height={88}
    xmlns=\\"http://www.w3.org/2000/svg\\"
    aria-labelledby={titleId}
    {...props}
  >
    {title ? <title id={titleId}>{title}</title> : null}
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert config accepts options {} 1`] = `
"const noop = () => null

export default noop
"
`;

exports[`convert config titleProp: without title added 1`] = `
"import * as React from 'react'

const SvgComponent = ({ title, titleId, ...props }) => (
  <svg
    width={0}
    height={0}
    style={{
      position: 'absolute',
    }}
    aria-labelledby={titleId}
    {...props}
  >
    {title ? <title id={titleId}>{title}</title> : null}
    <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should convert 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <g
      stroke=\\"#063855\\"
      strokeWidth={2}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <path d=\\"M51 37 37 51M51 51 37 37\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should convert style attribute 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg
    xmlns=\\"http://www.w3.org/2000/svg\\"
    xmlnsXlink=\\"http://www.w3.org/1999/xlink\\"
    width={48}
    height={48}
    {...props}
  >
    <g transform=\\"translate(0 -1004.362)\\">
      <g id=\\"prefix__a\\">
        <rect
          style={{
            color: '#000',
            fill: '#a3a3a3',
            fillOpacity: 1,
            fillRule: 'nonzero',
            stroke: 'none',
            strokeWidth: 8,
            marker: 'none',
            visibility: 'visible',
            display: 'inline',
            overflow: 'visible',
            enableBackground: 'accumulate',
          }}
          width={4}
          height={4}
          x={4}
          y={1010.362}
          rx={0.2}
          ry={0.2}
        />
        <rect
          ry={0.2}
          rx={0.2}
          y={1010.362}
          x={12}
          height={4}
          width={32}
          style={{
            color: '#000',
            fill: '#a3a3a3',
            fillOpacity: 1,
            fillRule: 'nonzero',
            stroke: 'none',
            strokeWidth: 8,
            marker: 'none',
            visibility: 'visible',
            display: 'inline',
            overflow: 'visible',
            enableBackground: 'accumulate',
          }}
        />
      </g>
      <use xlinkHref=\\"#prefix__a\\" />
      <use xlinkHref=\\"#prefix__a\\" transform=\\"translate(0 8)\\" />
      <use xlinkHref=\\"#prefix__a\\" transform=\\"translate(0 16)\\" />
      <use xlinkHref=\\"#prefix__a\\" transform=\\"translate(0 24)\\" />
      <use xlinkHref=\\"#prefix__a\\" transform=\\"translate(0 32)\\" />
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should handle special SVG attributes 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <path externalResourcesRequired=\\"false\\" d=\\"M10 10h100v100H10z\\" />
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should not remove all style tags 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <style>{'path{fill:red}'}</style>
    <g
      id=\\"prefix__Blocks\\"
      stroke=\\"none\\"
      strokeWidth={1}
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
    >
      <g id=\\"prefix__Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51 37 37 51\\" id=\\"prefix__Shape\\" />
        <path d=\\"M51 51 37 37\\" />
      </g>
    </g>
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should remove null characters 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg
    xmlns=\\"http://www.w3.org/2000/svg\\"
    width={25}
    height={25}
    style={{
      enableBackground: 'new 0 0 25 25',
    }}
    xmlSpace=\\"preserve\\"
    {...props}
  >
    <path
      d=\\"M19.4 24.5H5.6c-2.8 0-5.1-2.3-5.1-5.1V5.6C.5 2.8 2.8.5 5.6.5h13.8c2.8 0 5.1 2.3 5.1 5.1v13.8c0 2.8-2.3 5.1-5.1 5.1z\\"
      style={{
        fill: '#fff',
        stroke: '#434a54',
        strokeMiterlimit: 10,
      }}
    />
  </svg>
)

export default SvgComponent
"
`;

exports[`convert should remove style tags 1`] = `
"import * as React from 'react'

const SvgComponent = (props) => (
  <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
    <style />
    <g
      fill=\\"none\\"
      fillRule=\\"evenodd\\"
      strokeLinecap=\\"square\\"
      style={{
        fill: 'red',
      }}
    >
      <g id=\\"prefix__Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
        <path d=\\"M51 37 37 51\\" id=\\"prefix__Shape\\" />
        <path d=\\"M51 51 37 37\\" />
      </g>
    </g>
  </svg>
)

export default SvgComponent
"
`;
